# opensdpc

./: BuildPatch.py  MANIFEST.in  OpenSdpc.py  README.md  Sdpc.py  Sdpc_struct.py  __init__.py  generate_demo.ipynb  normalizeStaining.py  opensdpc.py  openslide_crop_patches.py  pyproject.toml  sdpc_cut_patches.py
DLL/: DecodeHevc.lib  avdevice.lib  avformat.lib  avutil.lib
LINUX/ffmpeg/: libavfilter.so.7.87.100  libavutil.so.56
LINUX/jpeg/: libjpeg.so.8.2.2  libturbojpeg.so.0.2.0
WINDOWS/: avcodec.lib  avfilter.lib  postproc.lib  swresample.lib  swscale.lib  turbojpeg-static.lib
data/: generate_demo.ipynb
data/multiprocess/: create_wsi_list.py  generate_patches.py  process_wsi.csv  slide_tools_fp.py
multiprocess/: create_wsi_list.py  generate_patches.py  slide_tools_fp.py
opensdpc/: __init__.py  opensdpc.py
opensdpc/LINUX/ffmpeg/: libswscale.so.5  readme.md
process/: openslide_crop_patches.py  sdpc_crop_patches.py
sdpc/: ReadMe.md  Sdpc.py
